--- a/resources/robot-variables/robot-variables-transactions.yaml
+++ b/resources/robot-variables/robot-variables-transactions.yaml
@@ -1,7 +1,11 @@
 
-#Standard SAP Transactions
+# Standard SAP Transactions
 standard:
   generaltable:              /nSE16N
   abapeditor:                /nSE38
   standard.generaltable:     /nSE16N
-  exittrans:                /NEX
+  exittrans:                 /nEX
+
+# Z SAP Transactions
+zsaptransactions:
+  zcadastromat:              /nZXCAD04
