--- a/resources/robot-variables/robot-variables-transactions.yaml
+++ b/resources/robot-variables/robot-variables-transactions.yaml
@@ -2,10 +2,12 @@
 # Standard SAP Transactions
 standard:
   generaltable:              /nSE16N
+  maintaintable:             /nSM30
   abapeditor:                /nSE38
   standard.generaltable:     /nSE16N
   exittrans:                 /nEX
 
 # Z SAP Transactions
 zsaptransactions:
+  zedicatgtmat:              /nZXCAD03
   zcadastromat:              /nZXCAD04
