--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -13,6 +13,9 @@ keyboard
 pillow
 boltons
 robotframework-ocrlibrary
+pytesseract
+tesseract
+opencv-python
 ## Keep your librarie always updated - pypi.org
 # python -m pip install --upgrade pip
 # pip --version
