--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -6,6 +6,7 @@ robotframework-faker
 robotframework-crypto
 robotframework-sapguilibrary
 robotframework-autoitlibrary
+robotframework-zoomba
 pyautogui
 pyyaml
 shyaml
@@ -36,6 +37,7 @@ opencv-python
 # pip install ez_setup
 # pip install setuptools --upgrade
 # pip install unroll
+# pip install jsondiff
 # pip --version
 # pip freeze - list of library python instaled
 # pip install -U robotframework
