--- a/resources/input-data/input-data-transactions.yaml
+++ b/resources/input-data/input-data-transactions.yaml
@@ -11,3 +11,4 @@ zsaptransactions:
   zedicatgtmat:              /nZXCAD03
   zcadastromat:              /nZXCAD04
   zxboxcatalog:              /nZALV_XGCTG01
+  zxboxctgtble:              ZTXGCTG01
