--- a/resources/input-data/input-data-transactions.yaml
+++ b/resources/input-data/input-data-transactions.yaml
@@ -10,5 +10,5 @@ standard:
 zsaptransactions:
   zedicatgtmat:              /nZXCAD03
   zcadastromat:              /nZXCAD04
-  zxboxcatalog:              /nZALV_XGCTG01
+  zxboxalvctlg:              /nZXGCTG01
   zxboxctgtble:              ZTXGCTG01
