--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -6,6 +6,7 @@ robotframework-faker
 robotframework-crypto
 robotframework-sapguilibrary
 robotframework-autoitlibrary
+robotframework-screencaplibrary
 robotframework-zoomba
 pyautogui
 pyyaml
