--- a/resources/input-data/input-data-xboxctg.yaml
+++ b/resources/input-data/input-data-xboxctg.yaml
@@ -5,4 +5,4 @@ xboxgamectg:
   gamename: "Grand Theft Auto V: Premium Edition"
   genregame: "Action & adventure"
   gamevalue: "14,99"
-  gamecurcy: "USR"
+  gamecurcy: "US"
