--- a/.github/workflows/gitlab-ci.yml
+++ b/.github/workflows/gitlab-ci.yml
@@ -17,4 +17,4 @@ docker_build:
     - docker build -t $IMAGE_NAME:latest .
     - docker push $IMAGE_NAME:latest
   only:
-    - main
+    - develop
