--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,56 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-      
-    - name: Upload a Build Artifact
-  uses: actions/upload-artifact@v3.1.0
-  with:
-    # Artifact name
-    name: # optional, default is artifact
-    # A file, directory or wildcard pattern that describes what to upload
-    path: 
-    # The desired behavior if no files are found using the provided path.
-Available Options:
-  warn: Output a warning but do not fail the action
-  error: Fail the action with an error message
-  ignore: Do not output any warnings or errors, the action does not fail
-
-    if-no-files-found:# optional, default is warn
-    # Duration after which artifact will expire in days. 0 means using default retention.
-Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-    retention-days: # optional
-    
-- name: Setup Go environment
-  uses: actions/setup-go@v3.2.1
-  with:
-    # The Go version to download (if necessary) and use. Supports semver spec and ranges.
-    go-version: # optional
-    # Path to the go.mod file.
-    go-version-file: # optional
-    # Set this option to true if you want the action to always check for the latest available version that satisfies the version spec
-    check-latest: # optional
-    # Used to pull node distributions from go-versions.  Since there's a default, this is typically not supplied by the user.
-    token: # optional, default is ${{ github.token }}
-    # Used to specify whether caching is needed. Set to true, if you'd like to enable caching.
-    cache: # optional
-    # Used to specify the path to a dependency file - go.sum
-    cache-dependency-path: # optional
-- name: Download a Build Artifact
-  uses: actions/download-artifact@v3.0.0
-  with:
-    # Artifact name
-    name: # optional
-    # Destination path
-    path: # optional
-    
-- name: First interaction
-  uses: actions/first-interaction@v1.1.0
-  with:
-    # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-    repo-token: 
-    # Comment to post on an individual's first issue
-    issue-message: # optional
-    # Comment to post on an individual's first pull request
-    pr-message: # optional
+      run: docker build . --file Dockerfile --tag ubuntu-robot-framework:$(31/07/2022 +%s)
