--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,16 +6,28 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
+    container:
+      image: hcardamone/hcardamonerobotframework:latest
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker pull robotframework/rfdocker
+      run: docker pull ppodgorsek/robot-framework \
+           docker push hcardamone/hcardamonerobotframework:latest
+
+
+            # - docker run \
+            # -v <local path to the reports' folder>:/opt/robotframework/reports:Z \
+            # -v <local path to the test suites' folder>:/opt/robotframework/tests:Z \
+            #     ppodgorsek/robot-framework:<version>
       #docker build . --file Dockerfile --tag ubuntu/robotframework:$(31/07/2022 +%s)
 
 
