--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,19 +6,25 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:  
-    -
-      name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.MY_GITHUB_TOKEN }}
+    # -
+    #   name: Login to GitHub Container Registry
+    #   uses: docker/login-action@v2
+    #   with:
+    #     registry: ghcr.io
+    #     username: ${{ github.actor }}
+    #     password: ${{ secrets.MY_GITHUB_TOKEN }}
     - 
       name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -43,12 +49,6 @@ jobs:
     
     container:
       image: hcardamone/hcardamonerobotframework:latest
-    # env:
-    #   # Use docker.io for Docker Hub if empty
-    #   REGISTRY: ghcr.io
-    #   # github.repository as <account>/<repo>
-    #   IMAGE_NAME: ${{ github.repository }}
-
 
             # - docker run \
             # -v <local path to the reports' folder>:/opt/robotframework/reports:Z \
