--- a/.github/workflows/robot-framework-checker.yml
+++ b/.github/workflows/robot-framework-checker.yml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - "develop"
-  workflow_dispatch:
-
+      
+    paths:
+      - ${{ secrets.SAP_AUTOMATION_POC_PATH }}
+  #workflow_dispatch:
 permissions:
   contents: read
 
 jobs:
   build:
+    if: github.repository ==  ${{ secrets.SAP_AUTOMATION_POC_PATH }}
     runs-on: ubuntu-latest
     name: Run Robot Framework Tests
     steps:
