--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,18 +16,16 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:  
-    -
-      name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.MY_GITHUB_TOKEN }}
-    - 
+    # - uses: docker/login-action@v2
+    #   name: Login to GitHub Container Registry
+    #   with:
+    #     registry: ghcr.io
+    #     username: ${{ github.actor }}
+    #     password: ${{ secrets.MY_GITHUB_TOKEN }}
+
+    - uses: docker/login-action@v2
       name: Login to Docker Hub
-      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -41,12 +39,11 @@ jobs:
         #   password: ${{ secrets.AZURE_CLIENT_SECRET }}
         #   # https://azuresdkdocs.blob.core.windows.net/$web/dotnet/Azure.Identity/1.0.0/api/Azure.Identity/Azure.Identity.EnvironmentCredential.html
 
-    -
+    - uses: actions/checkout@v3
       name: Build the Docker image
-      uses: actions/checkout@v3
       run: docker pull robotframework/rfdocker \
            docker push hcardamone/hcardamonerobotframework:latest
-    
+
     container:
       image: hcardamone/hcardamonerobotframework:latest
 
