--- a/.github/workflows/robot-framework-checker.yml
+++ b/.github/workflows/robot-framework-checker.yml
@@ -8,8 +8,8 @@ on:
     paths:
       - ${{ secrets.SAP_AUTOMATION_POC_PATH }}
   #workflow_dispatch:
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
   build:
