--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,24 +16,29 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:  
+    steps:
+    - name: Robot Framework
+      uses: tarathep/robotframework-github-action@v1.0
+      with:
+        image: kietara/robot-framework
+        image_version: 1.0
+        tests_dir: '${{ github.workspace }}/tests/robot'
+        reports_dir: '${{ github.workspace }}/tests/robot/reports'
+
+        uses: docker/login-action@v2
+        name: Login to Docker Hub
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        # uses: actions/checkout@v3
+        # name: Build the Docker image
+        # run:  docker pull ppodgorsek/robot-framework \
+        #       docker push hcardamone/hcardamonerobotframework:v.1
     # - uses: docker/login-action@v2
     #   name: Login to GitHub Container Registry
     #   with:
     #     registry: ghcr.io
     #     username: ${{ github.actor }}
     #     password: ${{ secrets.MY_GITHUB_TOKEN }}
-
-    - uses: docker/login-action@v2
-      name: Login to Docker Hub
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        uses: actions/checkout@v3
-        name: Build the Docker image
-        run: docker pull robotframework/rfdocker \
-            docker push hcardamone/hcardamonerobotframework:latest
-    
     #-
         # name: Login to ACR
         # uses: docker/login-action@v2
