--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,19 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+
+jobs:
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker pull robotframework/rfdocker
+      #docker build . --file Dockerfile --tag ubuntu/robotframework:$(31/07/2022 +%s)
+
 # env:
 #   # Use docker.io for Docker Hub if empty
 #   REGISTRY: ghcr.io
@@ -13,22 +26,22 @@ on:
 #   IMAGE_NAME: ${{ github.repository }}
 
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Robot Framework
-      uses: tarathep/robotframework-github-action@v1.0
-      with:
-        image: kietara/robot-framework
-        image_version: 1.0
-        tests_dir: '${{ github.workspace }}/tests/robot'
-        reports_dir: '${{ github.workspace }}/tests/robot/reports'
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Robot Framework
+#       uses: tarathep/robotframework-github-action@v1.0
+#       with:
+#         image: kietara/robot-framework
+#         image_version: 1.0
+#         tests_dir: '${{ github.workspace }}/tests/robot'
+#         reports_dir: '${{ github.workspace }}/tests/robot/reports'
 
-        uses: docker/login-action@v2
-        name: Login to Docker Hub
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#         uses: docker/login-action@v2
+#         name: Login to Docker Hub
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
         # uses: actions/checkout@v3
         # name: Build the Docker image
         # run:  docker pull ppodgorsek/robot-framework \
@@ -48,8 +61,8 @@ jobs:
         #   password: ${{ secrets.AZURE_CLIENT_SECRET }}
         #   # https://azuresdkdocs.blob.core.windows.net/$web/dotnet/Azure.Identity/1.0.0/api/Azure.Identity/Azure.Identity.EnvironmentCredential.html
 
-    container:
-      image: hcardamone/hcardamonerobotframework:latest
+    # container:
+    #   image: hcardamone/hcardamonerobotframework:latest
 
             # - docker run \
             # -v <local path to the reports' folder>:/opt/robotframework/reports:Z \
