--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,16 +7,16 @@ on:
     branches: [ "develop" ]
 
 
-jobs:
+# jobs:
 
-  build:
+#   build:
 
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker pull robotframework/rfdocker
+    # steps:
+    # - uses: actions/checkout@v3
+    # - name: Build the Docker image
+    #   run: docker pull robotframework/rfdocker
       #docker build . --file Dockerfile --tag ubuntu/robotframework:$(31/07/2022 +%s)
 
 # env:
@@ -26,17 +26,17 @@ jobs:
 #   IMAGE_NAME: ${{ github.repository }}
 
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Robot Framework
-#       uses: tarathep/robotframework-github-action@v1.0
-#       with:
-#         image: kietara/robot-framework
-#         image_version: 1.0
-#         tests_dir: '${{ github.workspace }}/tests/robot'
-#         reports_dir: '${{ github.workspace }}/tests/robot/reports'
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Robot Framework
+      uses: tarathep/robotframework-github-action@v1.0
+      with:
+        image: kietara/robot-framework
+        image_version: 1.0
+        tests_dir: '${{ github.workspace }}/sap-automation-poc/resources/tests/generaltabledisplay/standard/demo.robot'
+        reports_dir: '${{ github.workspace }}/sap-automation-poc/resources/'
 
 #         uses: docker/login-action@v2
 #         name: Login to Docker Hub
