--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,17 +26,32 @@ on:
 #   IMAGE_NAME: ${{ github.repository }}
 
 
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Robot Framework
-      uses: tarathep/robotframework-github-action@v1.0
-      with:
-        image: kietara/robot-framework
-        image_version: 1.0
-        tests_dir: '${{ github.workspace }}/sap-automation-poc/resources/tests/generaltabledisplay/standard/demo.robot'
-        reports_dir: '${{ github.workspace }}/resources/'
+    build:
+      runs-on: ubuntu-latest
+      name: Run Robot Framework Tests
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Robot Framework
+          uses: joonvena/robotframework-docker-action@v1.0
+          with:
+            browser: 'firefox'
+            robot_threads: 2
+            robot_tests_dir:  /resources/tests/generaltabledisplay/standard/
+            robot_reports_dir:  /resources/results
+#jobs:          
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Robot Framework
+  #     uses: tarathep/robotframework-github-action@v1.0
+  #     with:
+  #       image: kietara/robot-framework
+  #       image_version: 1.0
+  #       tests_dir: '${{ github.workspace }}/sap-automation-poc/resources/tests/generaltabledisplay/standard/demo.robot'
+  #       reports_dir: '${{ github.workspace }}/resources/'
 
 #         uses: docker/login-action@v2
 #         name: Login to Docker Hub
