--- a/docker/docker-image-bkp.yml
+++ b/docker/docker-image-bkp.yml
@@ -1,10 +1,10 @@
-name: Docker Image CI
+# name: Docker Image CI
 
-on:
-  push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "develop" ]
+# on:
+#   push:
+#     branches: [ "develop" ]
+#   pull_request:
+#     branches: [ "develop" ]
 
 
 # jobs:
@@ -27,20 +27,20 @@ on:
 
 
 
-jobs:
-    build:
-      runs-on: ubuntu-latest
-      name: Run Robot Framework Tests
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Robot Framework
-          uses: joonvena/robotframework-docker-action@v1.0
-          with:
-            browser: 'firefox'
-            robot_threads: 2
-            robot_tests_dir:  /resources/tests/generaltabledisplay/standard/
-            robot_reports_dir:  /resources/results
+# jobs:
+#     build:
+#       runs-on: ubuntu-latest
+#       name: Run Robot Framework Tests
+#       steps:
+#         - name: Checkout
+#           uses: actions/checkout@v2
+#         - name: Robot Framework
+#           uses: joonvena/robotframework-docker-action@v1.0
+#           with:
+#             browser: 'firefox'
+#             robot_threads: 2
+#             robot_tests_dir:    ${{ secrets.SAP_AUTOMATION_POC_PATH }}
+#             robot_reports_dir:  /resources/results
 #jobs:          
   # build:
   #   runs-on: ubuntu-latest
