adjuting uses folder action

--- a/.github/workflows/run-robot-framework.yml
+++ b/.github/workflows/run-robot-framework.yml
@@ -13,9 +13,9 @@ jobs:
       name: Run Robot Framework Tests
       steps:
         - name: Run SAP GUI NetWeaver Automation
-          uses: actions/checkout@v2
+          # uses: actions/checkout@v2
         - name: Robot Framework
-          uses: hcardamone/robotframework-docker-action@v1.0
+          uses: hcardamone/sap-automation-poc/robotframework-docker-action@v1.0
           with:
             browser: 'firefox'
             robot_threads: 2
