--- a/.github/robotframework-docker-action/action.yml
+++ b/.github/robotframework-docker-action/action.yml
@@ -46,7 +46,7 @@ runs:
   using: 'composite'
   steps:
     - shell: bash
-      run: sh "chmod 775 ${{ github.action_path }}/scipt-action.sh"
+      run: chmod +x ${{ github.action_path }}/scipt-action.sh
       env:
         ALLOWED_SHARED_MEMORY: ${{ inputs.allowed_shared_memory }}
         BROWSER: ${{ inputs.browser }}
@@ -58,3 +58,9 @@ runs:
         SCREEN_WIDTH: ${{ inputs.screen_width }}
         ROBOT_TESTS_DIR: ${{ inputs.robot_tests_dir }}
         ROBOT_REPORTS_DIR: ${{ inputs.robot_reports_dir }}
+
+# To update the script-action.sh 
+  # git update-index --chmod=+x \scipt-action.sh
+  # git update-index --skip-worktree --chmod=+x \scipt-action.sh
+  # sudo chmod u+x .github/robotframework-docker-action/scipt-action.sh
+  # chmod +rx \scipt-action.sh
