--- a/.github/workflows/run-robot-framework.yml
+++ b/.github/workflows/run-robot-framework.yml
@@ -16,9 +16,12 @@ jobs:
           uses: actions/checkout@v2
         - name: Robot Framework
           uses: joonvena/robotframework-docker-action@v1.0
+          env:
+            ROBOT_TESTS_DIR: ${{ inputs.robot_tests_dir }}
+            ROBOT_REPORTS_DIR: ${{ inputs.robot_reports_dir }}
           with:
             browser: 'firefox'
             robot_threads: 2
             robot_options:  --variablefile    ..\..\..\robot-variables\robot_variables.py --variablefile ..\..\..\..\resources\input-data\input-data-variables.py --loglevel TRACE --outputdir ..\..\..\results --include extract_transform_game_info --include load_game_info --exclude add_val_sapguitests .\demo.robot
-            robot_tests_dir:    ${{ secrets.SAP_AUTOMATION_POC_PATH }}
-            robot_reports_dir:  /resources/results
+            robot_tests_dir:    /resources/tests/generaltabledisplay/standard/
+            robot_reports_dir:  /resources/results/
