--- a/.github/robotframework-docker-action/action.yml
+++ b/.github/robotframework-docker-action/action.yml
@@ -46,7 +46,8 @@ runs:
   using: 'composite'
   steps:
     - shell: bash
-      run: chmod a+x ${{ github.action_path }}/scipt-action.sh
+      run: chmod a+x $GITHUB_ACTION_PATH/scipt-action.sh
+      # run: chmod a+x ${{ github.action_path }}/scipt-action.sh
       env:
         ALLOWED_SHARED_MEMORY: ${{ inputs.allowed_shared_memory }}
         BROWSER: ${{ inputs.browser }}
