--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install --upgrade pip
-             pip freeze -r requirements.txt
+             pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
