--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -73,11 +73,11 @@ jobs:
           #   ROBOT_TESTS_DIR: ${{ inputs.robot_tests_dir }}
           #   ROBOT_REPORTS_DIR: ${{ inputs.robot_reports_dir }}
         with:
-            browser: 'firefox'
-            robot_threads: 2
-            robot_tests_dir:    /resources/tests/generaltabledisplay/standard/
-            robot_reports_dir:  /resources/results/
-            robot_options:  --variablefile ..\..\..\robot-variables\robot_variables.py --variablefile ..\..\..\..\resources\input-data\input-data-variables.py --loglevel TRACE --outputdir ..\..\..\results
+          browser: 'firefox'
+          robot_threads: 2
+          robot_tests_dir:    /resources/tests/generaltabledisplay/standard/
+          robot_reports_dir:  /resources/results/
+          robot_options:  --variablefile .\resources\robot-variables\robot_variables.py --variablefile .\resources\input-data\input-data-variables.py --loglevel TRACE
   
   deploy:
     permissions:
