--- a/.github/workflows/run-robot-framework.yml
+++ b/.github/workflows/run-robot-framework.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           browser: 'firefox'
           robot_threads: 1
-          robot_tests_dir:    /resources/tests/generaltabledisplay/standard/
+          robot_tests_dir:    /resources/tests/generaltabledisplay/demo.v2/
           robot_reports_dir:  /resources/results/
-          robot_options:  robot --variablefile  ..\..\..\robot-variables\robot_variables.py --loglevel TRACE --outputdir ..\..\..\results --include extract_game_info --include transform_game_info --exclude add_val_sapguitests
+          robot_options:  robot --variablefile  ..\..\..\robot-variables\robot_variables.py --loglevel TRACE
       # name: Run SAP GUI NetWeaver Automation
       # steps:
       #   - name: Checkout
