--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 lxml
 decorator
 wheel
-robotframework==5.0
+robotframework
 robotframework-faker
 robotframework-crypto
 robotframework-sapguilibrary
 robotframework-autoitlibrary
 robotframework-screencaplibrary
+robotframework-seleniumlibrary
+robotframework-jsonlibrary
+jsonlib
 pyautogui
+pywin32
 pyyaml
 shyaml
 keyboard
