update code, adjusting several bugs

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ robotframework-autoitlibrary
 robotframework-screencaplibrary
 robotframework-seleniumlibrary
 robotframework-jsonlibrary
+robotframework-tidy
 jsondiff
 deepdiff
 pyautogui
